--- a/src/app/views/company-settings/company-settings-update/company-settings-update.component.html
+++ b/src/app/views/company-settings/company-settings-update/company-settings-update.component.html
@@ -3,8 +3,8 @@
 
   <aw-card>
     <form (ngSubmit)="handleSubmit()" [formGroup]="form">
-      <!-- timezone -->
       <div class="mb-2">
+        <!-- maximumDailyWorkHours -->
         <aw-form-input
           [badRequest]="badRequest"
           [form]="form"
@@ -15,9 +15,11 @@
           label="Horas diarias de trabajo" />
 
         <span class="small text-muted">Horas máximas al día continuadas por los empleados</span>
+        <!-- end maximumDailyWorkHours -->
 
         <div class="mt-3"></div>
 
+        <!-- timezone -->
         <aw-form-timezone
           [badRequest]="badRequest"
           [form]="form"
@@ -39,8 +41,18 @@
           </span>
         }
         <!-- end comparación de horas. -->
+        <!-- timezone -->
+
+        <div class="mt-3"></div>
+
+        <aw-form-checkbox
+          [badRequest]="badRequest"
+          [form]="form"
+          [submitted]="submitted"
+          fieldName="geolocationRequired"
+          formControlName="geolocationRequired"
+          label="Geolocalización requerida" />
       </div>
-      <!-- end timezone -->
 
       <!-- buttons-->
       <div class="mt-2">
