Al admin ningun role se le puede editar

--- a/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
@@ -30,6 +30,7 @@
         (ngModelChange)="handChangeValue(roles.enterpriseStaff, $event)"
         [(ngModel)]="isEnterpriseStaff"
         [checked]="isEnterpriseStaff"
+        [disabled]="isEnterpriseAdmin"
         class="form-check-input"
         id="role-staff"
         role="switch"
@@ -42,6 +43,7 @@
         (ngModelChange)="handChangeValue(roles.humanResources, $event)"
         [(ngModel)]="isHumanResources"
         [checked]="isHumanResources"
+        [disabled]="isEnterpriseAdmin"
         class="form-check-input"
         id="role-rrhh"
         role="switch"
