Implementado weeklyWorkingHours en companySettings

--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -40,6 +40,13 @@
           </tr>
           <tr>
             <td>
+              Horas de trabajo semanal
+              <aw-tooltip-info content="Horas totales de la semana laboral" cssClass="text-info"></aw-tooltip-info>
+            </td>
+            <td>{{ companySettings()?.weeklyWorkingHours }} horas</td>
+          </tr>
+          <tr>
+            <td>
               Geolocalización requerida
               <aw-tooltip-info
                 content="Para iniciar un tiempo, requiere por parte del empleado aceptar la geolocalización"
