--- a/src/app/views/company-settings/company-settings-update/company-settings-update.component.html
+++ b/src/app/views/company-settings/company-settings-update/company-settings-update.component.html
@@ -17,45 +17,64 @@
         <span class="small text-muted">Horas máximas al día continuadas por los empleados</span>
         <!-- end maximumDailyWorkHours -->
 
-        <div class="mt-3"></div>
+        <div class="mt-4">
+          <!-- weeklyWorkingHours -->
+          <aw-form-input
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            [inputType]="formInputTypes.integer"
+            fieldName="weeklyWorkingHours"
+            formControlName="weeklyWorkingHours"
+            label="Horas de trabajo semanal" />
+          <!-- end weeklyWorkingHours -->
+        </div>
 
-        <!-- timezone -->
-        <aw-form-timezone
-          [badRequest]="badRequest"
-          [form]="form"
-          [submitted]="submitted"
-          fieldName="timezone"
-          formControlName="timezone"
-          label="Zona horaria" />
+        <div class="mt-4">
+          <!-- timezone -->
+          <aw-form-timezone
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            fieldName="timezone"
+            formControlName="timezone"
+            label="Zona horaria" />
 
-        <!-- comparación de horas. -->
-        @if (nowWithOriginalTimezone) {
-          <span class="text-muted small">
-            Hora actual seleccionada: <strong>{{ nowWithOriginalTimezone }}</strong>
+          <!-- comparación de horas. -->
+          @if (nowWithOriginalTimezone) {
+            <span class="text-muted small">
+              Hora actual seleccionada: <strong>{{ nowWithOriginalTimezone }}</strong>
+            </span>
+          }
+
+          @if (nowWithTimezoneSelected) {
+            <span class="text-muted small">
+              - Nueva hora seleccionada: <strong>{{ nowWithTimezoneSelected }}</strong>
+            </span>
+          }
+          <!-- end comparación de horas. -->
+          <!-- timezone -->
+        </div>
+
+        <div class="mt-4">
+          <!-- geolocationRequired -->
+          <aw-form-checkbox
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            fieldName="geolocationRequired"
+            formControlName="geolocationRequired"
+            label="Geolocalización requerida" />
+
+          <span class="small text-muted">
+            El empleado deberá aceptar Geolocalización desde el navegador o no podrá iniciar/finalizar tiempos
           </span>
-        }
-
-        @if (nowWithTimezoneSelected) {
-          <span class="text-muted small">
-            - Nueva hora seleccionada: <strong>{{ nowWithTimezoneSelected }}</strong>
-          </span>
-        }
-        <!-- end comparación de horas. -->
-        <!-- timezone -->
-
-        <div class="mt-3"></div>
-
-        <aw-form-checkbox
-          [badRequest]="badRequest"
-          [form]="form"
-          [submitted]="submitted"
-          fieldName="geolocationRequired"
-          formControlName="geolocationRequired"
-          label="Geolocalización requerida" />
+        </div>
+        <!-- end geolocationRequired -->
       </div>
 
       <!-- buttons-->
-      <div class="mt-2">
+      <div class="mt-4">
         <aw-btn-back cssClass="me-2 btn btn-primary" />
 
         <aw-btn-loading
