--- a/src/app/views/errors/error403/error403.component.html
+++ b/src/app/views/errors/error403/error403.component.html
@@ -1,9 +1,17 @@
 <aw-view-base [navbarState]="false" [sidebarMenuState]="false" [footerState]="false">
-  <aw-card>
-    <div class="row">
-      <div class="m-auto">
+  <div class="container-fluid">
+    <div class="row align-items-center justify-content-center vh-100">
+      <div class="col-lg-6 m-auto text-center shadow-sm">
         <h1 class="text-danger">Forbidden</h1>
       </div>
+
+      <div class="col-12 text-center">
+        <aw-btn-back />
+
+        <button [routerLink]="siteUrls.home" class="btn btn-primary ms-2">
+          <span class="icon fas fa-home"></span> Inicio
+        </button>
+      </div>
     </div>
-  </aw-card>
+  </div>
 </aw-view-base>
