Fix input forms disabled

--- a/src/app/components/buttons/btn-loading/btn-loading.component.html
+++ b/src/app/components/buttons/btn-loading/btn-loading.component.html
@@ -1,4 +1,4 @@
-<button (click)="handleClick()" [class]="btnClass" [disabled]="loading" [type]="btnType">
+<button (click)="handleClick()" [class]="btnClass" [disabled]="disabled || loading" [type]="btnType">
   @if (!loading) {
     <span>
       <ng-content />
