--- a/src/app/pages/time-control-records/time-control-record-details/time-control-record-details.component.html
+++ b/src/app/pages/time-control-records/time-control-record-details/time-control-record-details.component.html
@@ -6,7 +6,9 @@
       <h4>Incidencia</h4>
 
       <div class="alert alert-warning nl2br">{{ timeControl?.incidenceDescription }}</div>
+      <button (click)="handleCloseIncidence()" class="btn btn-sm btn-outline-success">Cerrar incidencia</button>
     </aw-card>
+
     <div class="mt-4"></div>
   }
 
@@ -122,4 +124,13 @@
       }
     </div>
   </aw-card>
+
+  @if (!timeControl?.incidence && timeControl?.incidenceDescription) {
+    <div class="mt-4"></div>
+    <aw-card>
+      <h5>Incidencia cerrada</h5>
+
+      <div class="alert alert-success nl2br">{{ timeControl?.incidenceDescription }}</div>
+    </aw-card>
+  }
 </aw-view-base>
