renombrados view a page

--- a/src/app/components/pages/page-base/page-base.component.html
+++ b/src/app/components/pages/page-base/page-base.component.html
@@ -1,6 +1,6 @@
 <!-- title -->
 @if (showPageTitle) {
-  <aw-view-title [pageTitle]="pageTitle" />
+  <aw-page-title [pageTitle]="pageTitle" />
 }
 <!-- end title -->
 
