--- a/src/app/pages/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/pages/accounts/recovery-password/recovery-password.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [footerState]="false" [navbarState]="false" [sidebarMenuState]="false">
+<aw-page-base [footerState]="false" [navbarState]="false" [sidebarMenuState]="false">
   <div class="d-flex align-items-center justify-content-center recovery-password-container">
     <div class="form-recovery-password w-100">
       <aw-card extraCss="p-4">
@@ -37,4 +37,4 @@
       </aw-card>
     </div>
   </div>
-</aw-view-base>
+</aw-page-base>
