--- a/src/app/pages/category-absences/category-absence-create/category-absence-create.component.html
+++ b/src/app/pages/category-absences/category-absence-create/category-absence-create.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Crear ausencia</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Crear ausencia</aw-page-header>
 
   <aw-card>
     <form (ngSubmit)="handleSubmit()" [formGroup]="form">
@@ -62,4 +62,4 @@
       <!-- end buttons-->
     </form>
   </aw-card>
-</aw-view-base>
+</aw-page-base>
