--- a/src/app/pages/category-absences/category-absence-list/category-absence-list.component.html
+++ b/src/app/pages/category-absences/category-absence-list/category-absence-list.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Categorías de ausencias</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Categorías de ausencias</aw-page-header>
 
   <aw-card>
     <!-- toolbar -->
@@ -71,4 +71,4 @@
     }
     <!-- end pagination -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
