--- a/src/app/pages/category-absences/category-absence-update/category-absence-update.component.html
+++ b/src/app/pages/category-absences/category-absence-update/category-absence-update.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Editar ausencia</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Editar ausencia</aw-page-header>
 
   <aw-card>
     <!-- form -->
@@ -76,4 +76,4 @@
     }
     <!-- end form -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
