--- a/src/app/pages/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/pages/company-settings/company-settings-details/company-settings-details.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Configuración</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Configuración</aw-page-header>
 
   <aw-card>
     <a [routerLink]="[siteUrls.companySettings.update]" class="mb-3 btn btn-sm btn-outline-success">
@@ -68,4 +68,4 @@
       </tbody>
     </table>
   </aw-card>
-</aw-view-base>
+</aw-page-base>
