--- a/src/app/pages/company-tasks/company-task-create/company-task-create.component.html
+++ b/src/app/pages/company-tasks/company-task-create/company-task-create.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Crear tarea</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Crear tarea</aw-page-header>
 
   <aw-card>
     <!-- form -->
@@ -64,4 +64,4 @@
     </form>
     <!-- end form -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
