--- a/src/app/pages/company-tasks/company-task-update/company-task-update.component.html
+++ b/src/app/pages/company-tasks/company-task-update/company-task-update.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Editar tarea</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Editar tarea</aw-page-header>
 
   <aw-card>
     <!-- form -->
@@ -71,4 +71,4 @@
     }
     <!-- end form -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
