--- a/src/app/pages/departments/department-list/department-list.component.html
+++ b/src/app/pages/departments/department-list/department-list.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Departamentos</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Departamentos</aw-page-header>
 
   <aw-card>
     <!-- toolbar -->
@@ -59,4 +59,4 @@
     }
     <!-- end pagination -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
