--- a/src/app/pages/employees/employee-invite/employee-invite.component.html
+++ b/src/app/pages/employees/employee-invite/employee-invite.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Invitar empleado</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Invitar empleado</aw-page-header>
 
   <aw-card>
     <!-- from-->
@@ -67,4 +67,4 @@
     </form>
     <!-- end from-->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
