--- a/src/app/pages/employees/employee-list/employee-list.component.html
+++ b/src/app/pages/employees/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Lista de empleados</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Lista de empleados</aw-page-header>
 
   <aw-card>
     <!-- toolbar -->
@@ -54,4 +54,4 @@
     }
     <!-- end pagination -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
