--- a/src/app/pages/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
+++ b/src/app/pages/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Configuración de empleado</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Configuración de empleado</aw-page-header>
 
   <aw-card>
     <a [routerLink]="[siteUrls.employees.settingsUpdate]" class="mb-3 btn btn-sm btn-outline-success">
@@ -27,4 +27,4 @@
       </thead>
     </table>
   </aw-card>
-</aw-view-base>
+</aw-page-base>
