--- a/src/app/pages/employees/employee-settings/employee-settings-update/employee-settings-update.component.html
+++ b/src/app/pages/employees/employee-settings/employee-settings-update/employee-settings-update.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Editar Configuración</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Editar Configuración</aw-page-header>
 
   <aw-card>
     <form (ngSubmit)="handleSubmit()" [formGroup]="form">
@@ -42,4 +42,4 @@
       <!-- end buttons-->
     </form>
   </aw-card>
-</aw-view-base>
+</aw-page-base>
