--- a/src/app/pages/employees/employee-update/employee-update.component.html
+++ b/src/app/pages/employees/employee-update/employee-update.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Editar datos de empleado</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Editar datos de empleado</aw-page-header>
 
   <aw-card>
     <!-- form -->
@@ -79,4 +79,4 @@
     }
     <!-- end spinner -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
