--- a/src/app/pages/errors/error403/error403.component.html
+++ b/src/app/pages/errors/error403/error403.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [navbarState]="false" [sidebarMenuState]="false" [footerState]="false">
+<aw-page-base [navbarState]="false" [sidebarMenuState]="false" [footerState]="false">
   <div class="container-fluid">
     <div class="row align-items-center justify-content-center vh-100">
       <div class="col-lg-6 m-auto text-center shadow-sm">
@@ -14,4 +14,4 @@
       </div>
     </div>
   </div>
-</aw-view-base>
+</aw-page-base>
