--- a/src/app/pages/time-control-records/time-control-record-create/time-control-record-create.component.html
+++ b/src/app/pages/time-control-records/time-control-record-create/time-control-record-create.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Añadir tiempo</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Añadir tiempo</aw-page-header>
 
   <aw-card>
     <!-- seleccionar empleado -->
@@ -30,4 +30,4 @@
     </aw-card>
   }
   <!-- end seleccionar tiempos -->
-</aw-view-base>
+</aw-page-base>
