--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Registro de tiempos</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Registro de tiempos</aw-page-header>
 
   <aw-card>
     <!-- toolbar -->
@@ -155,4 +155,4 @@
     }
     <!-- end pagination -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
