--- a/src/app/pages/time-control-records/time-control-record-update/time-control-record-update.component.html
+++ b/src/app/pages/time-control-records/time-control-record-update/time-control-record-update.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Actualizar tiempo</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Actualizar tiempo</aw-page-header>
 
   <aw-card>
     @if (timeControl) {
@@ -87,4 +87,4 @@
       </form>
     }
   </aw-card>
-</aw-view-base>
+</aw-page-base>
