--- a/src/app/pages/times-control-progress/times-control-progress.component.html
+++ b/src/app/pages/times-control-progress/times-control-progress.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header>Control de tiempos</aw-view-header>
+<aw-page-base>
+  <aw-page-header>Control de tiempos</aw-page-header>
 
   <aw-card>
     @if (companyGeolocationRequired && !geolocationIsAvailable()) {
@@ -64,4 +64,4 @@
       [progressStackedCollection]="progressStackedCollection" />
   </aw-card>
   <!-- end times -->
-</aw-view-base>
+</aw-page-base>
