--- a/src/app/pages/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/pages/company-tasks/company-task-list/company-task-list.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Lista de tarea</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Lista de tarea</aw-page-header>
 
   <aw-card>
     <!-- toolbar -->
@@ -60,4 +60,4 @@
     }
     <!-- end pagination -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
