--- a/src/app/pages/departments/department-create/department-create.component.html
+++ b/src/app/pages/departments/department-create/department-create.component.html
@@ -1,5 +1,5 @@
-<aw-view-base>
-  <aw-view-header [breadcrumb]="breadcrumb">Crear departamento</aw-view-header>
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Crear departamento</aw-page-header>
 
   <aw-card>
     <!-- form -->
@@ -65,4 +65,4 @@
     </form>
     <!-- end form -->
   </aw-card>
-</aw-view-base>
+</aw-page-base>
