--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,63 +19,45 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a
-            [routerLink]="[siteUrls.home]"
-            aria-current="page"
-            class="nav-link cursor-pointer"
-            routerLinkActive="active">
-            Inicio
-          </a>
-        </li>
-        <li class="nav-item">
-          <a (click)="logOut()" class="nav-link cursor-pointer">Logout</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu border-0">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-            <li><a (click)="logOut()" class="dropdown-item cursor-pointer">Log out</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
+      <ul class="navbar-nav me-auto"></ul>
+
       <div>
-        <!-- incidences -->
-        <span [awRequiredRole]="roles.enterpriseStaff" class="me-3">
-          Incidencias
-          @if (timeControlIncidencesCount()) {
-            <span class="badge text-bg-danger">{{ timeControlIncidencesCount() }}</span>
-          } @else {
-            <span class="badge text-bg-secondary">0</span>
+        <ul class="navbar-nav">
+          <!-- incidences -->
+          <li [awRequiredRole]="roles.enterpriseStaff" class="nav-item">
+            <a [routerLink]="siteUrls.timeControlRecords.list" class="nav-link">
+              Incidencias
+
+              @if (timeControlIncidencesCount()) {
+                <span class="badge text-bg-danger">{{ timeControlIncidencesCount() }}</span>
+              } @else {
+                <span class="badge text-bg-secondary">0</span>
+              }
+            </a>
+          </li>
+          <!-- end incidences -->
+
+          <!-- theme selector -->
+          <li class="nav-item">
+            <a class="nav-link cursor-pointer">
+              <span
+                (click)="handleChangeTheme()"
+                [ngClass]="{
+                  'fa-solid fa-moon': theme() === themeColors.light,
+                  'fa-regular fa-sun': theme() === themeColors.dark
+                }"></span>
+            </a>
+          </li>
+          <!-- end theme selector -->
+
+          <!-- user information-->
+          @if (authState$()) {
+            <li class="nav-item">
+              <a class="nav-link">{{ userName }}</a>
+            </li>
           }
-        </span>
-        <!-- end incidences -->
-
-        <!-- theme selector -->
-        <span
-          (click)="handleChangeTheme()"
-          [ngClass]="{
-            'fa-solid fa-moon': theme() === themeColors.light,
-            'fa-regular fa-sun': theme() === themeColors.dark
-          }"
-          class="me-2 cursor-pointer"></span>
-        <!-- end theme selector -->
-
-        <!-- user information-->
-        @if (authState$()) {
-          {{ userName }}
-        }
-        <!-- user information -->
+          <!-- user information -->
+        </ul>
       </div>
     </div>
   </div>
