Rev aw-date-range-selector

--- a/src/app/components/selectors/date-range-selector/date-range-selector.component.html
+++ b/src/app/components/selectors/date-range-selector/date-range-selector.component.html
@@ -4,7 +4,8 @@
     [(ngModel)]="rangeValue"
     [bsConfig]="bsConfig"
     [maxDate]="maxDate"
-    [isDisabled]="disabled"
+    [isDisabled]="isDisabled"
+    [disabled]="isDisabled"
     bsDaterangepicker
     class="form-control" />
   <span class="fa-regular fa-calendar ms-2"></span>
