date-range-selector funcionalidad al icono de calendar

--- a/src/app/components/selectors/date-range-selector/date-range-selector.component.html
+++ b/src/app/components/selectors/date-range-selector/date-range-selector.component.html
@@ -8,5 +8,12 @@
     [disabled]="isDisabled"
     bsDaterangepicker
     class="form-control" />
-  <span class="fa-regular fa-calendar ms-2"></span>
+  <span
+    [ngClass]="{
+      'text-success': isDisabled && enableClickIcon,
+      'text-danger': !isDisabled && enableClickIcon,
+      'cursor-pointer': enableClickIcon
+    }"
+    (click)="handleClickIcon()"
+    class="fa-regular fa-calendar ms-2"></span>
 </div>
