--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -30,7 +30,10 @@
 
       <!-- date range filter -->
       <div>
-        <aw-date-range-selector (dateRangeValueChange)="handleDateRangeValueChange($event)" />
+        <aw-date-range-selector
+          (dateRangeValueChange)="handleDateRangeValueChange($event)"
+          (clickIcon)="handleClickIconDateRange()"
+          [isDisabled]="!filterDateRange" />
       </div>
       <!-- date range filter -->
 
